# chat-dada

./: .gitignore  Dockerfile  README.md  content_utils.py  context_manager.py  logger.py  main.py  models.py  progress_tracker.py  pyproject.toml  registry.py  requirements.txt  research_memory.py  research_planner.py  task_dispatcher.py  task_interaction.py  task_runtime.py  todo.md
agent/: TODO.md
agent_runtime/: __init__.py  dispatcher.py  interaction.py  root_graph.py  task_execution.py
agents/: data_analyst.py  deep_research.py  doc_agent.py  general_chat.py  orchestrator.py  research_worker.py  search_agent.py  writer_agent.py
capabilities/: context_manager.py  memory.py  planner.py  ppt_capability.py  retrieval_cache.py  review_gates.py
core/: content_utils.py  langsmith_config.py  logger.py  models.py  r2_storage.py  registry.py
domain/: __init__.py
memory/: __init__.py  store.py
old/: agent.py  index.html  orchestrator.py
orchestrator/: planner.py  runner.py  scheduler.py  templates.py
outputs/: integration_test.pptx  smoke_test.pptx  v2_excel_test.xlsx  v2_final_excel.xlsx  v2_final_test.pptx  v2_final_word.docx  v2_word_test.docx  利用 GNSS 多普勒频移可以反演 NLOS 信号到达方向_67ecf452.docx  图片转 Visio_f32ff28f.drawio  图片转 Visio_f32ff28f.vsdx  基于之前GNSS深度研究结果的论文写作研究_03a6357d.md  基于纯GNSS的城市多路径时空图构建NLOS识别与半天球模型反演的论文写作研究_30f4dc18.md  基于车载GNSS观测与真实轨迹的城市多路径时空图构建NLOS识别及半天球模型反演_5d25caad.md
ppt_engine/: dsl_schema.py  renderer.py
renderers/: excel_renderer.py  markdown_renderer.py  visio_renderer.py  word_renderer.py
runtime/: conversation_context.py  task_dispatcher.py  task_interaction.py  task_runtime.py
scripts/: compare_event_sequences.py  init.sql
static/: index.html
storage/: user_store.py  user_store_v2.py
task_platform/: domain_registry.py  root_graph.py  router.py  state.py  streaming.py  tracing.py
tests/: test_admin_models_api.py  test_auth_deps.py  test_auth_password.py  test_auth_routes.py  test_brain_registry.py  test_browser_toolkit.py  test_context_manager.py  test_conversation_context.py  test_coordinator_phase1.py  test_coordinator_phase2_checkpoints.py  test_coordinator_phase2_e2e.py  test_coordinator_phase2_events.py  test_coordinator_phase2_interrupt.py  test_coordinator_phase2_patent.py  test_coordinator_phase2_ppt.py  test_coordinator_phase2_research.py  test_coordinator_phase2_zero_report.py  test_coordinator_phase3_crossdomain.py  test_coordinator_phase3_event_sequence.py  test_coordinator_phase3_routing_accuracy.py  test_coordinator_phase3_singleskill_latency.py  test_coordinator_state.py  test_cost_logging.py  test_dag_validation.py  test_deep_research.py  test_deepagents_backend.py  test_desktop_executor.py  test_desktop_hands_ws.py  test_desktop_manager.py  test_exa_search.py  test_failure_handling.py  test_gateway_desktop_routing.py  test_logger.py  test_markdown_renderer.py  test_models.py  test_office_domain.py  test_office_goal_normalizer.py  test_office_reference_layer.py  test_office_reference_models.py  test_office_workflow_prompt.py  (+29 more)
tools/: academic_search.py  brave_search.py  code_executor.py  exa_search.py  image_gen.py  image_to_diagram.py  summarizer.py  (+3 more)
(+361 files in other folders)
