[project]
name = "chat-dada"
version = "0.3.0"
description = "Chat DaDa — AI assistant with multi-agent orchestration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.29.0",
    "boto3>=1.42.0",
    "browser-use>=0.11.13",
    "deepagents>=0.4.11",
    "exa-py>=1.5.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "langchain>=1.2.13",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.4.0",
    "langchain-core>=1.2.0",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.0",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "playwright>=1.44.0",
    "pydantic>=2.0.0",
    "python-docx>=1.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "python-pptx>=1.0.0",
    "redis>=7.0",
    "tavily-python>=0.3.0",
    "uvicorn[standard]>=0.4.0",
    "vsdx>=0.6.0",
    "websockets>=12.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
