[project]
name = "chat-dada"
version = "0.3.0"
description = "Chat DaDa — AI assistant with multi-agent orchestration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.29.0",
    "authlib>=1.6.6",
    "boto3>=1.42.0",
    "browser-use>=0.11.13",
    "deepagents>=0.4.11",
    "exa-py>=1.5.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "langchain>=1.2.13",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.4.0",
    "langchain-core>=1.2.0",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-postgres>=3.0.5",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "psycopg[binary]>=3.2.9",
    "playwright>=1.44.0",
    "pydantic>=2.0.0",
    "python-docx>=1.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "python-pptx>=1.0.0",
    "redis>=7.0",
    "sqlalchemy>=2.0.48",
    "tavily-python>=0.3.0",
    "uvicorn[standard]>=0.4.0",
    "vsdx>=0.6.0",
    "websockets>=12.0",
    "pwdlib[argon2]>=0.3.0",
    "itsdangerous>=2.2.0",
    "pgvector>=0.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
